Fixed all cards to work on tablet

--- a/style.css
+++ b/style.css
@@ -123,7 +123,6 @@ body{
     height: auto;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
-    padding-bottom: 1%;
     background-color: white;
 }
 
@@ -207,12 +206,31 @@ body{
 
 /* Mobile media query */
 @media screen and (min-width:0px) and (max-width:500px){
-body{
-    color: red;
-}
-
-
-}
+    .cardsection{
+        gap: 0%;
+        padding: 0%;
+        display: block;
+    }   
+    .card{
+        display: flex;
+        box-shadow: none;
+        margin-top: 2%;
+        margin-bottom: 2%;
+        width: 100%;
+        height: 150px;
+    }
+    
+    .cardsection img{
+        height: 100%;
+    }
+    
+    .cardtextcontent{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    }
 
 /* Tablet media query */
 
@@ -232,7 +250,7 @@ body{
 }
 
 .cardsection img{
-    height: 158px;
+    height: 100%;
 }
 
 .cardtextcontent{
